lib/src/compiler/tests/testdata/errors/126.out
error[E001]: syntax error
 --> line:3:5
  |
3 |     $
  |     ^ this `$` is outside of the body of a `for .. of` statement